If we want to override java flags at build time of the XVM project, we can't expect the plugin, which is an independent entity, to remember that unless we explicitly store those flags in the plugin. However, it seems a lot better to just run with DEFAULT_JVM_OPS= ... ./gradlew command lines, I dunno ... but anyway, I did it.