@@ -13,10 +13,10 @@ import java.io.File
  */
 
 plugins {
-    alias(libs.plugins.xdk.build.publish)
     alias(libs.plugins.xtc)
     alias(libs.plugins.versions)
     alias(libs.plugins.sonatype.publish)
+    alias(libs.plugins.xdk.build.publish)
     application
     distribution
     signing
@@ -109,15 +109,13 @@ fun createLauncherScriptTask(scriptName: String, mainClassName: String) = tasks.
     outputDir = layout.buildDirectory.dir("scripts").get().asFile
     classpath = configurations.xdkJavaTools.get()
     defaultJvmOpts = buildList {
-        add("-ea")
+        // Use defaultJvmArgs from Java convention plugin
+        val defaultJvmArgs = project.extra["defaultJvmArgs"] as List<String>
+        addAll(defaultJvmArgs)
         add("-DXDK_HOME=\${XDK_HOME:-\$APP_HOME}")
-        // Enable preview features when explicitly enabled
-        val enablePreview = getXdkPropertyBoolean("org.xtclang.java.enablePreview", false)
-        if (enablePreview) {
-            add("--enable-preview")
-        }
     }
-    
+    logger.info("[xdk] Default JVM args for $scriptName: $defaultJvmOpts")
+
     // Declare outputs explicitly  
     outputs.files(File(outputDir, scriptName), File(outputDir, "$scriptName.bat"))
     
